New template added

--- a/src/app/components/design/design.component.css
+++ b/src/app/components/design/design.component.css
@@ -100,6 +100,11 @@
 	font-weight: medium;
 	margin-top: 3rem;
 }
+.newName{
+	font-size: 2rem;
+	text-align: center;
+	font-family: sans-serif;
+}
 @media only screen and (max-width:1200px)
 {
 	.design_temp{
