--- a/src/app/components/design/design.component.html
+++ b/src/app/components/design/design.component.html
@@ -31,6 +31,7 @@
 					<div class="template" *ngFor="let design of designs">
 						<div class="design_temp" [routerLink]="['/edit-template']" (click)="templateSelected(design.img)">
 							<img [src]="design.img">
+							<div class="newName">{{desing.name}}</div>
 						</div>
 						<div class="design_cont">{{design.name}}</div>
 					</div>
