--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,7 @@
-<div class="header">
+<div class="header navbar">
+		<div class="logo">
+			<img src="../../../assets/logo.png"><span>CertiGen</span>
+		</div>
 		<div class="logo">
 			<img src="../../../assets/logo.png"><span>CertiGen</span>
 		</div>
